@@ -51,7 +51,7 @@ public class RobotUtils {
     public static void clickReset() {
         try {
             click("#resetMenu");
-            RobotThread.build(3000, ()->click("#resetOk")).run();
+            new RobotThread(1000, ()->click("#resetOk")).run();
         } catch(Exception e) {
             e.printStackTrace();
         }
@@ -64,7 +64,7 @@ public class RobotUtils {
      * @return Optional of result node if any is found. Otherwise, returns an empty optional.
      */
     public static Optional<Node> lookup(String value) {
-        List<Scene> scenes = Stage.getWindows().stream().map(Window::getScene).collect(Collectors.toList());
+        List<Scene> scenes = Stage.getWindows().stream().map(Window::getScene).toList();
         Node foundNode = null;
         for (Scene scene : scenes) {
             Node newNode = scene.lookup(value);
@@ -114,9 +114,9 @@ public class RobotUtils {
         Node node = lookup.get();
         String text = getText(node);
         if (value.equals(text)) {
-            System.out.println("Success: " + fxId + " successfully evaluated to '''" + value + "'''");
+            System.out.println("CHECK SUCCESS: " + fxId + " evaluated to '''" + value + "'''");
         } else {
-            System.out.println("TEST ERROR: Could not evaluate FXID " + fxId + " value '''"
+            System.out.println("CHECK ERROR: Could not evaluate FXID " + fxId + " value '''"
                     + text + "''' to expected value '''" + value + "'''");
         }
     }
